Update RUN sh with Cookbook dir

--- a/app-gpu.json
+++ b/app-gpu.json
@@ -1,13 +1,13 @@
 {
-  "id": "cookbook-jupyter-template-gpu",
-  "version": "0.0.1",
-  "description": "Jupyter Lab environment for GPU",
+  "id": "WebODM",
+  "version": "0.0.3sha-338eadd",
+  "description": "WebODM running on GPU",
   "owner": "${apiUserId}",
   "enabled": true,
   "runtime": "SINGULARITY",
   "runtimeVersion": null,
   "runtimeOptions": ["SINGULARITY_RUN"],
-  "containerImage": "docker://ghcr.io/in-for-disaster-analytics/cookbook-jupyter-template-gpu:0.0.1",
+  "containerImage": "docker://ghcr.io/wmobley/webodm-gpu:sha-338eadd",
   "jobType": "BATCH",
   "maxJobs": -1,
   "maxJobsPerUser": -1,
@@ -150,11 +150,11 @@
   },
   "tags": ["portalName: ALL"],
   "notes": {
-    "label": "Cookbook - Jupyter Lab (GPU)",
+    "label": "WebODM- Jupyter Lab (GPU)",
     "hideNodeCountAndCoresPerNode": true,
     "isInteractive": true,
     "icon": "jupyter",
     "category": "Data Processing",
-    "queueFilter": ["gpu-a100", "gpu-a100-dev", "gpu-a100-small"]
+    "queueFilter": ["gpu-a100", "gpu-a100-dev", "gpu-a100-small", "development"]
   }
 }
